--- a/DeuxMMS/Admin-Dashboard.html
+++ b/DeuxMMS/Admin-Dashboard.html
@@ -252,7 +252,15 @@
     
     <footer class="u-align-center u-clearfix u-custom-color-5 u-footer u-footer" id="sec-adbb"><div class="u-align-left u-clearfix u-sheet u-sheet-1"></div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
-
+      <a class="u-link" href="https://nicepage.com/css-templates" target="_blank">
+        <span>CSS Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="https://nicepage.com/" target="_blank">
+        <span>Website Builder Software</span>
+      </a>. 
     </section>
   </body>
 </html>
